# prototype-correlation-id

./: .pre-commit-config.yaml  Dockerfile  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: dev_launcher  docker-compose.yml
src/my_microservice/: __init__.py  __main__.py  config.py  models.py
src/my_microservice/api/: __init__.py  deps.py  main.py
src/my_microservice/core/: greeting.py
src/pci/: __main__.py  cli.py  config.py  context_vars.py  inject.py  main.py  models.py
src/pci/adapters/inbound/: event_sub.py
src/pci/adapters/inbound/fastapi_/: configure.py  dummies.py  routes.py  utils.py
src/pci/adapters/outbound/: event_pub.py
src/pci/core/: __init__.py  data_repository.py
src/pci/ports/inbound/: data_repository.py
src/pci/ports/outbound/: event_pub.py
tests/: test_calls.py  test_correlation.py  test_isolation.py  test_unit.py
tests/fixtures/: config.py  joint.py  test_config.yaml  utils.py
