[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[project]
# please adapt to package name
name = "pci"
version = "0.1.0"
description = "A prototype showcasing correlation ID propagation."
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer >= 0.7.0",
    "ghga-service-commons[api] >= 1.0.0",
    "ghga-event-schemas >= 1.0.0",
    "hexkit[akafka,s3,mongodb] >= 1.0.0"
]

[project.urls]
# please adapt to package name
Repository = "https://github.com/ghga-de/prototype-correlation-id"

[project.scripts]
# please adapt to package name
pci = "pci.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
